# cb3portfolio

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  REFACTOR_PLAN.md  agent.md  client_calculations_plan.md  conftest.py  coverage.xml  db.sqlite3  pyproject.toml  pytest.ini  test_output.txt  test_output_2.txt
.agent/: allow.md
.agent/rules/: architecture.md  code-quality.md  django-patterns.md  linting.md  testing.md
.agent/workflows/: create-engine.md  create-feature.md  fix-issue.md  run-tests.md
.github/workflows/: ci.yml  dependency-review.yml  security.yml
config/: asgi.py  logging.py  logging_config.py  settings.py  startup_checks.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py  testing.py
docs/architecture/: preparatory_refactoring.md
portfolio/: admin.py  checks.py  context_builders.py  exceptions.py  managers.py  market_data.py  models.py  services.py  structs.py  types.py  urls.py  views.py
portfolio/domain/: __init__.py  allocation.py  analysis.py  portfolio.py
portfolio/forms/: __init__.py  allocations.py  holdings.py  strategies.py
portfolio/management/commands/: benchmark_allocation_performance.py  check_golden_reference.py  fix_cash_allocations.py  seed_db.py  seed_dev_data.py  seed_system.py  seed_users.py
portfolio/middleware/: __init__.py  request_id.py  timing.py
portfolio/migrations/: 0001_initial.py  0002_add_user_relationships.py  0002_alter_holding_shares_precision.py  0002_holding.py  0002_remove_holding_cost_basis.py  0003_add_security_price_model.py  0003_alter_assetclass_category.py  0003_assetclass_category.py  0003_remove_assetclass_target_allocation_pct_and_more.py  0004_alter_assetclass_category.py  0004_assetcategory_alter_assetclass_category.py  0004_rebalancingrecommendation.py  0004_remove_holding_current_price.py  0005_assetclass_primary_security.py  0005_remove_account_tax_treatment.py  0006_add_is_primary_to_security.py  0006_institution_alter_account_institution.py  0007_accountgroup_account_group.py  0007_alter_securityprice_unique_together_and_more.py  0008_populate_account_groups.py  0009_alter_targetallocation_asset_class_accounttype_and_more.py  0010_migrate_account_types.py  0011_remove_account_account_type_link_and_more.py  0012_alter_targetallocation_unique_together_and_more.py  0013_rename_assetcategory_assetclasscategory_and_more.py
portfolio/models/: __init__.py  accounts.py  assets.py  portfolio.py  rebalancing.py  securities.py  signals.py  strategies.py
portfolio/presenters/: __init__.py  allocation.py  holdings.py  target_allocations.py
portfolio/services/: __init__.py  allocation_calculations.py  allocation_presentation.py  market_data.py  pricing.py  seeder.py  summary.py  target_allocations.py  targets.py
portfolio/services/allocations/: __init__.py  calculations.py  data_providers.py  engine.py  formatters.py  protocols.py  types.py
portfolio/services/rebalancing/: __init__.py  calculator.py  dataclasses.py  engine.py
portfolio/templates/: 400.html  403.html  404.html  500.html
portfolio/templates/portfolio/: allocation_strategy_form.html  base.html  holdings.html  index.html  rebalancing.html  sidebar.html  target_allocations.html
portfolio/templates/registration/: login.html
portfolio/templatetags/: allocation_tags.py  portfolio_extras.py  portfolio_filters.py  portfolio_tags.py
portfolio/tests/: __init__.py  base.py  conftest.py  constants.py  factories.py  test_account_groups.py  test_allocation.py  test_allocation_calculations.py  test_allocation_presentation.py  test_allocation_refactored.py  test_allocation_strategies.py  test_allocation_strategies_view.py  test_allocation_vectorized.py  test_auth.py  test_dashboard_view.py  test_edge_cases.py  test_exceptions.py  test_factories.py  test_fixture_validation.py  test_frontend_allocations.py  test_holdings_post.py  test_managers.py  test_market_data.py  test_models.py  test_portfolio.py  test_presenters.py  test_services.py  test_target_allocations.py  test_templatetags.py  test_views.py
portfolio/tests/calculations/: test_decimal_precision.py  test_golden_reference.py
portfolio/tests/domain/: test_allocation.py  test_analysis.py  test_portfolio.py
portfolio/tests/e2e/: README.md  conftest.py  helpers.py  test_dashboard_page.py  test_display_edge_cases.py  test_display_validation.py  test_golden_reference_display.py  test_helpers_smoke.py  test_holdings_page.py  test_portfolio_explicit_target.py  test_rebalancing.py  test_smoke_pages.py  test_target_allocations_page.py
portfolio/tests/fixtures/: benchmarks.py  golden_reference.py  mocks.py
portfolio/tests/forms/: __init__.py  test_allocations.py  test_holdings.py  test_strategies.py
portfolio/tests/integration/: test_edge_cases.py  test_fixture_validation.py  test_templatetags.py
portfolio/tests/middleware/: test_request_id.py  test_timing.py
portfolio/tests/models/: __init__.py  test_account_groups.py  test_accounts.py  test_allocation_strategies_legacy.py  test_assets.py  test_portfolio.py  test_rebalancing.py  test_securities.py  test_signals.py  test_strategies.py  test_target_allocations_legacy.py
portfolio/tests/services/: test_allocation_calculations.py  test_allocation_presentation.py  test_allocation_vectorized.py  test_allocations.py  test_market_data.py  test_pricing.py  test_seeder.py  test_target_allocations.py
portfolio/tests/templatetags/: __init__.py  test_allocation_tags.py  test_portfolio_filters.py  test_portfolio_tags.py
portfolio/tests/test_calculations/: test_allocation_calculations.py  test_golden_reference.py
portfolio/tests/test_domain/: test_allocation.py  (+2 more)
portfolio/utils/: security.py
portfolio/views/: __init__.py  allocations.py  dashboard.py  health.py  holdings.py  mixins.py  rebalancing.py  strategies.py  targets.py
scripts/: audit_test_markers.py
static/css/: portfolio.css
static/js/: sidebar-toggle.js
users/: forms.py  models.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_auth.py  test_registration.py
(+45 files in other folders)
